# feedmine

./: .gitignore  .loop_progress.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  project.yml  pyproject.toml
docs/: AppStoreSubmission.md  FeedEngineMigration.md  FeedmineCompletionPlan.md  PhysicalDeviceTesting.md  brazil-city-coverage.md  loop-focus-areas.md  roadmap.md
feedmine/: ContentView.swift  Greetings.json  Info.plist  PrivacyInfo.xcprivacy  feedmineApp.swift
feedmine.xcodeproj/: project.pbxproj
feedmineTests/: CatalogBrowserViewModelTests.swift  ContentCollectionTests.swift  ContentDistributionTests.swift  ContentVarietyDiagnostics.swift  DatabasePerformanceTests.swift  FeedEngineBoundaryTests.swift  FeedLoaderCacheTests.swift  FeedStoreTests.swift  FilterPerformanceTests.swift  MomentGreetingTests.swift  ReservoirTests.swift  SQLiteCatalogStoreTests.swift  SourceSchedulerTests.swift  TaxonomyStoreTests.swift
feedmineUITests/: FeedmineFilterUITests.swift  FeedmineUITests.swift
feedmine_verify/: __main__.py  checker.py  cleaner.py  cli.py  constants.py  models.py  reporter.py  scanner.py  verifiers.py
scripts/: add_ui_test_target.rb  build_catalog.py  build_feed_recovery_queues.py  curate_opml_catalog.py  detect_language.py  diagnose_image_failures.py  diamond_playbutton_scraper.py  discover_topics.py  enrich_feed_descriptions.py  enrich_loop.sh  extract_strings.py  fetch_all_feeds.py  fetch_all_feeds_v2.py  generate_opml_manifest.sh  merge_recovered_feed_corpus.py  newspapers_scraper.py  populate_empty_opml_candidates.py  requirements_fetch.txt  (+16 more)
(+5435 files in other folders)
