[project]
name = "feedmine-verify"
version = "1.0.0"
description = "Verify RSS/Atom feed URLs in OPML files — fast, concurrent, with in-place cleaning."
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["aiohttp>=3.9"]

[project.scripts]
feedmine-verify = "feedmine_verify.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["feedmine_verify*"]
